vlib/v/checker/tests/incorrect_name_alias_type.out
vlib/v/checker/tests/incorrect_name_alias_type.vv:1:1: error: type alias `integer` must begin with capital letter
    1 | type integer = int
      | ~~~~~~~~~~~~